server port update

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3000;
- CONNECTION_STRING =mongodb://localhost:27017/node?
+ CONNECTION_STRING =mongodb://localhost:27017/ziizii?
 # mongoose.connect('mongodb://localhost:27017/mycontacts-backend');
 # CONNECTION_STRING =mongodb://localhost:27017/mycontacts-backend
 ACCESS_TOKEN_SECRET = incorrect;
